# layer-wise-probing-llm-dcd0-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: belief_representation_truthfulness_LLM_internal_activations_probing_20260221_210125.jsonl  layer-wise_representation_analysis_GPT-2_Llama_epistemic_knowledge_20260221_205818.jsonl  probing_analysis_belief_encoding_large_language_models_layers_20260221_205534.jsonl  probing_classifiers_neural_network_internal_representations_NLP_20260221_205824.jsonl  what_does_BERT_know_linguistic_probing_tasks_knowledge_representations_20260221_210059.jsonl
papers/: README.md
papers/pages/: bortoletto2024_brittle_minds_belief_manifest.txt  burns2022_discovering_latent_knowledge_manifest.txt  ju2024_layerwise_context_knowledge_manifest.txt  marks2023_geometry_truth_manifest.txt  (+1 more)
src/: analysis.py  data_preparation.py  extract_activations.py  probing.py  run_experiments.py  run_fast_probing.py  run_probing_and_analysis.py
(+930 files in other folders)
